--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h1>Ingrese nombre del minino</h1>
         <input type="text" placeholder="Ingrese nombre del gato" required>
         <button type="submit">Enviar</button>
-        <button type="submit">Limpiar</button>
+        <button type="reset">Limpiar</button>
       </form>
     </main>
     <foother>
