--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation:wght@700&family=Fasthand&family=Rubik+Iso&display=swap" rel="stylesheet">
     <link href="sytyle.css" rel="stylesheet">
+    <style>
+      body{
+        background-image: url("https://img.freepik.com/vector-premium/patron-lindas-mascotas-diferentes-perros_113065-737.jpg?w=2000")
+      }
+    </style>
   </head>
   <body>
     <h2>AppDeGatos</h2>
